feat(liquor-shop):詳細ページ追加

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -65,6 +65,7 @@ console.log();
 	:root {
 		--color-accent: #4BA095;
 		--color-sub-accent: #1D2A82;
+		--color-secondary: #70295E;
 		--color-danger: #dc3545;
 		--font-color: #333333;
 		--space-x1: 4px;
