--- a/src/pages/liquor-shop/[slug].astro
+++ b/src/pages/liquor-shop/[slug].astro
@@ -1,11 +1,15 @@
 ---
 
 import Layout from '../../layouts/Layout.astro';
+import { Image, Picture } from '@astrojs/image/components';
+import Lightbox from '@julian_cataldo/astro-lightbox/Lightbox.astro';
+import DisplayComponents from '@src/components/DisplayComponents.astro';
+
 
 const { slug } = Astro.params;
 
 export async function getStaticPaths() {
-  const res = await fetch(`${import.meta.env.PUBLIC_API_URL}/store?per_page=100&order=asc&_embed`);
+  const res = await fetch(`${import.meta.env.PUBLIC_API_URL}/liquor-shop?per_page=20&order=asc&_embed`);
   const posts = await res.json();
 
   return posts.map(post => (
@@ -28,7 +32,422 @@ const eyeCatch = store._embedded['wp:featuredmedia'] ? store._embedded['wp:featu
     }
   };
 
+const facebook = store.acf.facebook_url ? `<li><a href="${store.acf.facebook_url}" target="_blank"><img src="/assets/images/sns-facebook.png" alt="Facebook" width="36" height="36" loading="lazy"></a></li>` : '';
+const twitter = store.acf.twitter_url ? `<li><a href="${store.acf.twitter_url}" target="_blank"><img src="/assets/images/sns-x.png" alt="X(Twitter)" width="36" height="36" loading="lazy"></a></li>` : '';
+const instagram = store.acf.instagram_url ? `<li><a href="${store.acf.instagram_url}" target="_blank"><img src="/assets/images/sns-instagram.png" alt="Instagram" width="36" height="36" loading="lazy"></a></li>` : '';
+
+const snsList = (facebook || twitter || instagram) ? `<ul>${facebook + twitter + instagram}</ul>` : '';
+const googleMapSrc = `https://maps.google.co.jp/maps?output=embed&q=${store.title.rendered}&z=16`;
+
+const notFoundImage1 = 'https://data.nga-osaka.com/2023/wp-content/uploads/2023/08/preparation-image1-1.jpg';
+const storeImage1Url = store.acf.store_image1 ? store.acf.store_image1.url : notFoundImage1;
+const storeImage1Width = store.acf.store_image1 ? store.acf.store_image1.width : '1';
+const storeImage1Height = store.acf.store_image1 ? store.acf.store_image1.height : '1';
+const storeImage1MimeType = store.acf.store_image1 ? store.acf.store_image1.mime_type.split('/')[1] : 'jpeg';
+
+const storeImage2Url = store.acf.store_image2 ? store.acf.store_image2.url : notFoundImage1;
+const storeImage2Width = store.acf.store_image2 ? store.acf.store_image2.width : '1';
+const storeImage2Height = store.acf.store_image2 ? store.acf.store_image2.height : '1';
+const storeImage2MimeType = store.acf.store_image2 ? store.acf.store_image2.mime_type.split('/')[1] : 'jpeg';
+
+const storeImage3Url = store.acf.store_image3 ? store.acf.store_image3.url : notFoundImage1;
+const storeImage3Width = store.acf.store_image3 ? store.acf.store_image3.width : '1';
+const storeImage3Height = store.acf.store_image3 ? store.acf.store_image3.height : '1';
+const storeImage3MimeType = store.acf.store_image3 ? store.acf.store_image3.mime_type.split('/')[1] : 'jpeg';
+
 ---
 
 <Layout title={ store.title.rendered }>
+  <main data-canceled={store.acf['liquor-shop_canceled']}>
+    <div class="store-visual">
+      <img src="/assets/images/tokkuri-tokyo.png" class="store-visual__tokkuri-image" width="721" height="1249" alt="">
+      <img src={eyeCatch.source_url} alt={store.acf['liquor-shop_name']} class="store-visual__image" width={eyeCatch.media_details.width} height={eyeCatch.media_details.height} decoding="async">
+    </div>
+    <div class="container">
+      <h1><span set:html={store.acf['liquor-shop_number']} />{store.title.rendered}</h1>
+      <p set:html={store.content.rendered} />
+      <section>
+        <div class="store-decriptionBox">
+          <h2 class="store-decriptionBox__title">店舗紹介文</h2>
+          <div class="store-decriptionBox__inner">
+            <p set:html={store.acf['liquor-shop_description']} />
+            <svg width="100%" height="100%" class="store-decriptionBox__border">
+              <rect
+                      width="100%"
+                      height="100%"
+                      fill="none"
+                      stroke="gray"
+                      stroke-width="3"
+              />
+            </svg>
+          </div>
+        </div>
+      </section>
+      <div class="store-image section">
+        <DisplayComponents image={store.acf['liquor-shop_image1']}>
+          <figure class="store-image__figure" data-lightbox="true">
+            <Image src={storeImage1Url} alt="" class="store-image__image" width={storeImage1Width} height={storeImage1Height} format={storeImage1MimeType} />
+          </figure>
+        </DisplayComponents>
+        <DisplayComponents image={store.acf['liquor-shop_image2']}>
+          <figure class="store-image__figure" data-lightbox="true">
+            <Image src={storeImage2Url} alt="" class="store-image__image" width={storeImage2Width} height={storeImage2Height} format={storeImage2MimeType} />
+          </figure>
+        </DisplayComponents>
+        <DisplayComponents image={store.acf['liquor-shop_image3']}>
+          <figure class="store-image__figure" data-lightbox="true">
+            <Image src={storeImage3Url} alt="" class="store-image__image" width={storeImage3Width} height={storeImage3Height} format={storeImage3MimeType} />
+          </figure>
+        </DisplayComponents>
+      </div>
+      <section class="section">
+        <dl class="store-spec">
+          <div class="store-spec__group">
+            <dt class="store-spec__term">住所</dt>
+            <dd class="store-spec__description">
+              <p><span class="u-display-block">〒{store.acf['liquor-shop_zip']}</span>
+                <span class="u-display-block">{store.acf['liquor-shop_address1']}</span>
+                <span class="u-display-block">{store.acf['liquor-shop_address2']}</span></p>
+              <!--// <p>最寄り駅：{store.acf['liquor-shop_route']}・{store.acf['liquor-shop_station']}</p>-->
+              <div>
+                <iframe width="600" height="450" class="googlemap" src={googleMapSrc}></iframe>
+              </div>
+            </dd>
+          </div>
+          <div class="store-spec__group">
+            <dt class="store-spec__term">電話番号</dt>
+            <dd class="store-spec__description">{store.acf['liquor-shop_tel']}</dd>
+          </div>
+          <div class="store-spec__group">
+            <dt class="store-spec__term">Webサイト</dt>
+            <dd class="store-spec__description"><a href={store.acf['liquor-shop_url']} target="_blank">{store.acf['liquor-shop_url']}</a></dd>
+          </div>
+          <div class="store-spec__group">
+            <dt class="store-spec__term">SNS</dt>
+            <dd class="store-spec__description"><ul class="sns-list" set:html={facebook + twitter + instagram} /></dd>
+          </div>
+        </dl>
+      </section>
+    </div>
+  </main>
 </Layout>
+
+<script>
+  import gsap from 'gsap';
+  import { ScrollTrigger } from "gsap/ScrollTrigger";
+  import { CustomEase } from "gsap/CustomEase";
+
+  gsap.registerPlugin(CustomEase);
+  gsap.registerPlugin(ScrollTrigger);
+  gsap.timeline({ repeat: 0, repeatDelay: 0.5 })
+    .to(".store-visual__tokkuri-image", {duration: 0.5, rotate: '-110deg', translate: "50% -50%"})
+    .to(".store-visual__image", { maskSize: '200% 130%', maskPosition: '100% bottom', duration: 2,
+      ease: CustomEase.create("custom", "M0,0 C0.126,0.382 0.105,0.438 0.298,0.34 0.478,0.248 0.614,0.839 0.7,0.8 0.928,0.696 0.871,1 1,1 ")});
+
+  gsap.utils.toArray('.store-decriptionBox__title')
+    .forEach((item) => {
+      gsap.fromTo(item,
+        { x: '-100%', opacity: 0},
+        { x: '0%', opacity: 1,
+          scrollTrigger:{
+            trigger:item,
+            start:'top 80%',
+            end:'bottom 20%',
+            toggleActions:'play none none reverse',
+          }});
+    });
+
+  gsap.utils.toArray('.store-decriptionBox__border>rect')
+    .forEach((item) => {
+      gsap.to(item,
+        {
+          strokeDashoffset: '0',
+          ease: 'linear',
+          duration: 0.7,
+          scrollTrigger: {
+            trigger: item.parentNode,
+            start: 'top 80%',
+            end: 'bottom 20%',
+            toggleActions: 'play none none reverse',
+          }
+        });
+    });
+
+  gsap.utils.toArray('.store-decriptionBox__inner')
+    .forEach((item) => {
+      gsap.to(item,
+        {
+          maskSize: '100% 130%',
+          ease: 'linear',
+          duration: 0.7,
+          scrollTrigger: {
+            trigger: item.parentNode,
+            start: 'top 80%',
+            end: 'bottom 20%',
+            toggleActions: 'play none none reverse',
+          }
+        });
+    });
+
+  gsap.utils.toArray('.store-image__figure')
+    .forEach((item) => {
+      gsap.to(item,
+        {
+          x: 0,
+          opacity: 1,
+          duration: 0.7,
+          scrollTrigger: {
+            trigger: item,
+            start: 'top 80%',
+            end: 'bottom 20%',
+            toggleActions: 'play none none reverse',
+          }
+        });
+    });
+</script>
+<style lang="scss">
+  @use "sass:color";
+
+  main {
+    background: url(/assets/images/section-store-bg.jpg);
+    &[data-canceled="中止"] {
+      & > .store-visual {
+        position: relative;
+
+        &::before {
+          content: '';
+          position: absolute;
+          inset: 0;
+          display: block;
+          background-color: rgba(0, 0, 0, .4);
+          z-index: 1;
+        }
+
+        &::after {
+          content: '出店中止';
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          padding: var(--space-x2) var(--space-x8) calc(var(--space-x2) + 4px);
+          border-radius: 10px;
+          border: 3px solid;
+          background-color: rgba(255, 255, 255, .85);
+          font-weight: bold;
+          font-size: 200%;
+          color: var(--color-danger);
+          transform: translate(-50%, -50%);
+          letter-spacing: .2em;
+          z-index: 2;
+        }
+
+        &:hover {
+          background-size: 0%;
+        }
+      }
+    }
+  }
+  .store-visual {
+    position: relative;
+    display: grid;
+    grid-template: "storeVisual" 1fr
+      / 1fr;
+    place-items: center;
+    height: 300px;
+    @media (min-width: 576px) {
+      height: 400px;
+    }
+    @media (min-width: 768px) {
+      height: 500px;
+    }
+    @media (min-width: 992px) {
+      height: 700px;
+    }
+  }
+  .store-visual__tokkuri-image {
+    position: absolute;
+    grid-area: storeVisual;
+    width: 50px;
+  }
+  .store-visual__image {
+    position: absolute;
+    grid-area: storeVisual;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    -webkit-mask-image: url(/assets/images/wave-mask.png);
+    mask-image: url(/assets/images/wave-mask.png);
+    -webkit-mask-size: 200% 0%;
+    mask-size: 200% 0%;
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-position: left bottom;
+    mask-position: left bottom;
+  }
+  h1 {
+    display: flex;
+    gap: var(--space-x2);
+    width: fit-content;
+    margin: 0 calc(50% - 50vw) 0 auto;
+    padding: var(--space-x2);
+    background-color: rgba(255,255,255,.8);
+    font-size: clamp(20px, 3vw, 30px);
+    line-height: 1.5;
+    transform: translateY(-50%);
+    &>span {
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      min-width: 1.75em;
+      height: 1.75em;
+      padding-bottom: 0.1em;
+      color: white;
+      border-radius: 50%;
+      background-color: var(--color-secondary);
+    }
+    @media (min-width: 768px) {
+      padding: var(--space-x4) 1.5em;
+    }
+  }
+  .store-decriptionBox__title {
+    position: absolute;
+    margin: 0 auto 0 calc(var(--space-x5) * -1);
+    padding: var(--space-x2) var(--space-x5);
+    background-color: var(--color-secondary);
+    background-image: linear-gradient(-90deg, var(--color-secondary) 0%, color.scale(#70295E, $lightness: -25%) 80%, color.scale(#70295E, $lightness: -15%) 100%);
+    color: white;
+    z-index: 1;
+    transform: translateY(-50%);
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      top: 5px;
+      left: 5px;
+      width: 100%;
+      height: 100%;
+      border: 1px solid white;
+    }
+    &::after {
+      top: 6px;
+      left: 6px;
+      border-color: var(--color-secondary);
+    }
+  }
+  .store-decriptionBox {
+    position: relative;
+    max-width: 800px;
+    margin-top: var(--space-x20);
+    margin-inline: auto;
+  }
+  .store-decriptionBox__inner {
+    padding: var(--space-x10) var(--space-x5) var(--space-x5);
+    background-color: rgba(255,255,255,.75);
+    -webkit-mask-image: linear-gradient(transparent,#000000 10%, #000000);
+    mask-image: linear-gradient(transparent,#000000 10%, #000000);
+    //-webkit-mask-image: url(/assets/images/wave-mask.svg);
+    //mask-image: url(/assets/images/wave-mask.svg);
+    -webkit-mask-size: 100% 0%;
+    mask-size: 100% 0%;
+    -webkit-mask-position: left bottom;
+    mask-position: left bottom;
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+  }
+  .store-decriptionBox__border {
+    position: absolute;
+    inset: 0;
+    overflow: visible;
+    &>rect {
+      width: 100%;
+      height: 100%;
+      stroke: var(--color-secondary);
+      stroke-dasharray:400%;
+      stroke-dashoffset:400%;
+    }
+  }
+
+  .store-spec {
+    margin: var(--space-x8) auto 0;
+    //max-width: 800px;
+  }
+  .store-spec__group {
+    display: grid;
+    grid-template: 1fr / minmax(7em, .3fr) 1fr;
+    border: 1px solid #ddd;
+    &:not(:nth-of-type(1)) {
+      border-top: 0;
+    }
+  }
+  .store-spec__term,
+  .store-spec__description {
+    padding: var(--space-x2) var(--space-x3);
+    @media (min-width: 576px) {
+      padding: var(--space-x3) var(--space-x4);
+    }
+    @media (min-width: 768px) {
+      padding: var(--space-x4) var(--space-x8);
+    }
+  }
+  .store-spec__term {
+    background-color: var(--color-secondary);
+    background-image: linear-gradient(-90deg, var(--color-secondary) 0%, color.scale(#70295E, $lightness: -25%) 80%, color.scale(#70295E, $lightness: -15%) 100%);
+    color: white;
+  }
+  .store-spec__description {
+    margin-left: 0;
+    background-color: rgba(255,255,255,.8);
+    >* {
+      margin-top: 0;
+    }
+  }
+  .sns-list {
+    display: flex;
+    gap: var(--space-x10);
+    margin: 0;
+  }
+  .googlemap {
+    width: 100%;
+    height: 300px;
+    border: 1px solid #ddd;
+    @media (min-width: 768px) {
+      height: 400px;
+    }
+  }
+
+  .store-image {
+    display: grid;
+    grid-template: "image1 image2" auto
+    "image3 image2" auto
+    / .55fr .45fr;
+    gap: var(--space-x8);
+    margin-top: var(--space-x10);
+  }
+  .store-image__figure {
+    aspect-ratio: 1;
+    height: auto;
+    margin: 0;
+    opacity: 0;
+    box-shadow: 0px 3px 3px rgba(0,0,0,.4), 0px 8px 8px rgba(0,0,0,.15);
+    &:nth-of-type(1) {
+      grid-area: image1;
+      width: calc(100% / 0.55 * 0.45);
+      transform: translateX(-25%);
+    }
+    &:nth-of-type(2) {
+      grid-area: image2;
+      align-self: center;
+      transform: translateX(25%);
+    }
+    &:nth-of-type(3) {
+      grid-area: image3;
+      width: calc(100% / 0.55 * 0.45);
+      margin-left: auto;
+      transform: translateX(-25%);
+    }
+  }
+  .store-image__image {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
+</style>
