--- a/src/pages/liquor-shop/[slug].astro
+++ b/src/pages/liquor-shop/[slug].astro
@@ -297,11 +297,11 @@ const storeImage3MimeType = store.acf.store_image3 ? store.acf.store_image3.mime
       display: inline-flex;
       justify-content: center;
       align-items: center;
-      min-width: 1.75em;
+      min-width: 2em;
       height: 1.75em;
       padding-bottom: 0.1em;
       color: white;
-      border-radius: 50%;
+      border-radius: 5px;
       background-color: var(--color-secondary);
     }
     @media (min-width: 768px) {
