doc(store):店番号を修正

--- a/src/components/DisplayComponents.astro
+++ b/src/components/DisplayComponents.astro
@@ -1,7 +1,7 @@
 ---
 const { image } = Astro.props;
 const isImage = image ? true : false;
-console.log(image);
+// console.log(image);
 ---
 
 {isImage && <slot />}
