--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import { Picture } from '@astrojs/image/components';
 
 const res = await fetch(`${import.meta.env.PUBLIC_API_URL}/store?per_page=100&order=asc`);
 const stores = await res.json();
+stores.sort((a, b) => a.acf.store_number - b.acf.store_number);
 // console.log(stores);
 ---
 
