feat(store):エリア絞り込み追加

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -62,7 +62,7 @@ const url = new URL(Astro.url.pathname, 'https://nga-osaka.com');
 </html>
 <style is:global>
 	:root {
-		--color-accent: #4BA095;
+		--color-accent: rgba(75, 160, 149, 0.99);
 		--color-sub-accent: #1D2A82;
 		--color-secondary: #70295E;
 		--color-danger: #dc3545;
