--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -925,7 +925,7 @@ stores.sort((a, b) => a.acf.store_number - b.acf.store_number);
 			background-size: 100%;
 			transition: background-size .15s ease-in-out;
 		}
-		&[data-canceled="中止"] {
+		&[data-canceled="true"] {
 			position: relative;
 			&::before {
 				content: '';
