--- a/src/pages/store/[slug].astro
+++ b/src/pages/store/[slug].astro
@@ -345,7 +345,7 @@ const liquorShopURL = `/liquor-shop/${storeInCharge[store.acf.store_in_charge.va
 
     main {
         background: url(/assets/images/section-store-bg.jpg);
-      &[data-canceled="中止"] {
+      &[data-canceled="true"] {
         & > .store-visual {
           position: relative;
 
