--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,8 @@ import ProductOnly from '../components/ProductOnly.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import Lightbox from '@julian_cataldo/astro-lightbox/Lightbox.astro';
+import { ViewTransitions } from 'astro:transitions';
+
 
 interface Props {
 	title: string;
