--- a/src/pages/store/index.astro
+++ b/src/pages/store/index.astro
@@ -1,6 +1,5 @@
 ---
 import Layout from '@src/layouts/Layout.astro';
-import { Image, Picture } from '@astrojs/image/components';
 import DisplayComponents from '@src/components/DisplayComponents.astro';
 
 type store = {
@@ -99,7 +98,8 @@ console.log(areaNameList);
 stores.forEach(store => {
   store.image = {};
   if(store['_embedded']['wp:featuredmedia']) {
-    store.image.url = store['_embedded']['wp:featuredmedia'][0]['source_url'];
+    store.image.url = store.acf.appetizer_image;
+    // store.image.url = store['_embedded']['wp:featuredmedia'][0]['source_url'];
     // console.log(store['_embedded']['wp:featuredmedia'][0]);
   } else {
     store.image.width = '1920';
@@ -133,13 +133,13 @@ stores.forEach(store => {
                 <article class="store-item" data-area={areaList[store.area]} data-open={store.acf.event_start} data-end={store.acf.event_end} data-display="true">
                   <a href={`/store/${store.slug}`} class="store-link" data-canceled={store.acf.store_canceled}>
                     <figure class="store-figure">
-                      <img src={store.image.url} width={store.image.width} height={store.image.height} alt="" class="store-image" loading="lazy">
+                      <img src={store.image.url} width="1920" height="1080" alt="" class="store-image" loading="lazy">
                       <figcaption class="store-figcaption">{areaList[store.area]}</figcaption>
                     </figure>
-                    <h2 class="store-title"><span class="store-number">{store.acf.store_number}</span>{store.title.rendered}<span class="store-price">{Number(store.acf.appetizer_price1).toLocaleString()}円</span></h2>
+                    <h2 class="store-title" transition:name="title"><span class="store-number">{store.acf.store_number}</span>{store.title.rendered}<span class="store-price">{Number(store.acf.appetizer_price1).toLocaleString()}円</span></h2>
                     <div class="store-content">
-                      <!--<p>{store.acf.appetizer_name}</p>-->
-                      <!--<p>{store.acf.sake_service}</p>-->
+                      <p class="store-content__appetizer"><img src="/assets/images/icon-food.svg" width="18" height="18" alt="">{store.acf.appetizer_name}</p>
+                      <p><img src="/assets/images/icon-sake.svg" width="18" height="18" alt="">{store.acf.sake_service}</p>
                       <p><img src="/assets/images/icon-time.svg" width="18" height="18" alt="">{store.acf.event_start}〜{store.acf.event_end}</p>
                       <p><img src="/assets/images/icon-seat.svg" width="18" height="18" alt="">立食 {store.acf.capacity_standing}名/着席 {store.acf.capacity_sitting}名/合計 {Number(store.acf.capacity_standing) + Number(store.acf.capacity_sitting)}名</p>
                       <p><img src="/assets/images/icon-train.svg" width="18" height="18" alt="">{store.station}</p>
@@ -351,7 +351,12 @@ buttonAreasDisCheck.addEventListener('click',()=> {
       display: flex;
       align-items: center;
       gap: var(--space-x1);
-      margin: 0;
+      margin: 6px 0 0;
+      line-height: 1.2;
     }
+  }
+  .store-content__appetizer {
+    color: #444;
+    font-weight: bold;
   }
 </style>
